feat. L6
- добавлен аггрегирующий функционал (средняя длина входных данных, средний результат) для bulk-запросов